# shockee-qt

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build-ubuntu.sh  deploy-macos.sh
arduino/: shockee_sensors.ino
debian/: changelog  control  copyright  install  rules  shockee.desktop
src/: calibrationdialog.cpp  calibrationdialog.h  datalogger.cpp  datalogger.h  main.cpp  mainwindow.cpp  mainwindow.h  plotwidget.cpp  plotwidget.h  serialcommunicator.cpp  serialcommunicator.h
